[gd_scene load_steps=10 format=3 uid="uid://intro_level_scene"]

[ext_resource type="Script" path="res://scripts/intro_level.gd" id="1"]
[ext_resource type="Script" path="res://scripts/rhythm_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/jumpscare_layer.gd" id="3"]
[ext_resource type="Script" path="res://scripts/title_card_layer.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://ch4jstvgqg2c2" path="res://objects/key_listner.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://lose_screen_scene" path="res://lose_screen.tscn" id="6"]
[ext_resource type="Script" path="res://scripts/music_manager.gd" id="7"]

[node name="IntroLevel" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RhythmManager" type="Node" parent="."]
script = ExtResource("2")
spawn_interval = 1.0
speed_ramp_time = 15.0
speed_multiplier = 100.0

[node name="KeyListeners" type="Node2D" parent="."]

[node name="HitLine" type="ColorRect" parent="KeyListeners"]
offset_left = -300.0
offset_top = 275.0
offset_right = 300.0
offset_bottom = 285.0
color = Color(1, 1, 1, 0.5)

[node name="KeyD" parent="KeyListeners" instance=ExtResource("5")]
position = Vector2(-165, 280)
key_name = "rhythm_down"

[node name="KeyF" parent="KeyListeners" instance=ExtResource("5")]
position = Vector2(-50, 280)
rotation = -1.5708
key_name = "rhythm_left"

[node name="KeyJ" parent="KeyListeners" instance=ExtResource("5")]
position = Vector2(66, 280)
rotation = 1.5708
key_name = "rhythm_right"

[node name="KeyK" parent="KeyListeners" instance=ExtResource("5")]
position = Vector2(176, 280)
rotation = 3.14159
key_name = "rhythm_up"

[node name="FadeOverlay" type="ColorRect" parent="."]
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0)

[node name="JumpscareLayer" type="CanvasLayer" parent="."]
script = ExtResource("3")

[node name="TitleCardLayer" type="CanvasLayer" parent="."]
script = ExtResource("4")

[node name="TitleLabel" type="Label" parent="TitleCardLayer"]
offset_left = 320.0
offset_top = 200.0
offset_right = 832.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 64
text = "RHYTHM HELL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoseScreen" parent="." instance=ExtResource("6")]

[node name="MusicManager" type="AudioStreamPlayer" parent="."]
script = ExtResource("7")
